--- a/Css_Files/video.css
+++ b/Css_Files/video.css
@@ -17,6 +17,13 @@
   margin: 0;
   font-weight: 500;
   font-size: 14px;
+  line-height: 1.5em;
+  height: 3em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .name {
